update links to media

--- a/src/about/our-story.html
+++ b/src/about/our-story.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
 
-                    <img class="header-painted-wood" src="../media/painted-wood-cropped-4.png" alt="" />
+                    <img class="header-painted-wood" src="/media/painted-wood-cropped-4.png" alt="" />
 
 
                     <!--Navbar-->
@@ -163,7 +163,7 @@
 
                     <div class="col-12 tm-media tm-media-v-center">
                         <p>
-                            <img src="../media/AmyMcCracken.jpg" alt="Amy McCracken" class="img-fluid tm-media-img"
+                            <img src="/media/AmyMcCracken.jpg" alt="Amy McCracken" class="img-fluid tm-media-img"
                                 style="float:left" />
                             In the summer of 2011, Amy McCracken visited Thrangu Kong Jo Sherab Ling Nunnery, in
                             Eastern Tibet
@@ -186,7 +186,7 @@
 
                     <div class="row tm-welcome-row" style="margin-top:70px;">
                         <article class="col-lg-6 tm-media-img-card tm-img-card">
-                            <img src="../media/MedicalCenter.png" alt="Welcome image" class="img-fluid tm-media-img" />
+                            <img src="/media/MedicalCenter.png" alt="Welcome image" class="img-fluid tm-media-img" />
 
                             <!--  class="tm-media-body" -->
                             <div>
@@ -200,7 +200,7 @@
                             </div>
                         </article>
                         <article class="col-lg-6 tm-media-img-card">
-                            <img src="../media/pool.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                            <img src="/media/pool.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                             <!--  class="tm-media-body" -->
                             <div>
@@ -215,7 +215,7 @@
                             </div>
                         </article>
                         <article class="col-lg-6 tm-media-img-card">
-                            <img src="../media/nuns-with-books.jpeg" alt="Welcome image"
+                            <img src="/media/nuns-with-books.jpeg" alt="Welcome image"
                                 class="img-fluid tm-media-img" />
 
                             <!-- class="tm-media-body" -->
@@ -229,7 +229,7 @@
                             </div>
                         </article>
                         <article class="col-lg-6 tm-media-img-card">
-                            <img src="../media/nunnery-construction.jpg" alt="Welcome image"
+                            <img src="/media/nunnery-construction.jpg" alt="Welcome image"
                                 class="img-fluid tm-media-img" />
 
                             <!-- class="tm-media-body" -->
@@ -249,7 +249,7 @@
                             </div>
                         </article>
                         <article class="col-lg-6 tm-media-img-card">
-                            <img src="../media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
+                            <img src="/media/DarkMountains.jpeg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                             <!-- class="tm-media-body" -->
                             <div>
@@ -267,7 +267,7 @@
                             </div>
                         </article>
                         <article class="col-lg-6 tm-media-img-card">
-                            <img src="../media/nuns-on-steps.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
+                            <img src="/media/nuns-on-steps.jpg" alt="Welcome image" class="img-fluid tm-media-img" />
 
                             <!-- class="tm-media-body" -->
                             <div>
@@ -283,7 +283,7 @@
             </section>
 
             <div style="display:flex;justify-content:center;margin-bottom:45px">
-                <img src="../media/HH-Karmapa-caption.jpg"
+                <img src="/media/HH-Karmapa-caption.jpg"
                     alt="Quote from HH 17th Karmapa: 'You offer joy and happiness to another person, and it reflects back into your own life'"
                     style="width:600px;" />
             </div>
@@ -376,7 +376,7 @@
                 </div>
 
                 <!--End mc_embed_signup-->
-            <img id="footer-painted-wood" src="../media/painted-wood-cropped-3.png" alt="" />
+            <img id="footer-painted-wood" src="/media/painted-wood-cropped-3.png" alt="" />
 
             <p>
                 Copyright &copy; 2020 New Vision - Design: <a href="https://templatemo.com" rel="sponsored"
