--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                 <div class="center">
                     <figure class="tm-dotted-box-fig">
                         <img
-                            src="./media/nuns-at-tilokpur.JPG"
+                            src="/media/nuns-at-tilokpur.JPG"
                             alt="nuns at Tilokpur nunnery"
                         />
                     </figure>
@@ -106,7 +106,7 @@
                 <div class="center">
                     <figure class="tm-dotted-box-fig">
                         <img
-                            src="./media/construction-in-sikkim.JPG"
+                            src="/media/construction-in-sikkim.JPG"
                             alt="construction at the nunnery in Sikkim"
                         />
                     </figure>
@@ -136,7 +136,7 @@
                 <div class="center">
                     <figure class="tm-dotted-box-fig">
                         <img
-                            src="./media/thrangu-roof-2.png"
+                            src="/media/thrangu-roof-2.png"
                             alt=""
                             style="max-height: 550px; width: auto"
                         />
@@ -166,7 +166,7 @@
 
                 <div class="center">
                     <figure class="tm-dotted-box-fig">
-                        <img src="./media/sponsor-1-cropped.png" alt="" />
+                        <img src="/media/sponsor-1-cropped.png" alt="" />
                     </figure>
 
                     <a href="./sponsor.html" class="tm-link-card-bottom"
