--- a/src/nunneries/palchen-chosling-lachi.html
+++ b/src/nunneries/palchen-chosling-lachi.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -277,7 +277,7 @@
             <div class="row">
                 <div class="col-12">
                     <img
-                        src="../media/Ralang-Sikkim-Nuns.jpg"
+                        src="/media/Ralang-Sikkim-Nuns.jpg"
                         alt="Nuns at Palchen Chosling Lachi Nunnery in Sikkim"
                         class="hero"
                     />
@@ -298,7 +298,7 @@
 
                     <figure class="hero">
                         <img
-                            src="../media/Palchen-Chosling-Lachi-map.png"
+                            src="/media/Palchen-Chosling-Lachi-map.png"
                             style="max-width: 750px"
                         />
                         <figcaption
@@ -447,7 +447,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
