--- a/src/pages/about/board.html
+++ b/src/pages/about/board.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -294,7 +294,7 @@
 
             <figure class="hero">
                 <img
-                    src="../media/board.jpg"
+                    src="/media/board.jpg"
                     alt="picture of our board members"
                 />
                 <figcaption>
@@ -305,7 +305,7 @@
 
             <div class="tm-new-board-blog-section">
                 <img
-                    src="../media/jess.png"
+                    src="/media/jess.png"
                     alt="Jess McNally"
                     class="tm-new-board-blog-img"
                 />
@@ -330,7 +330,7 @@
             </div>
             <div class="tm-new-board-blog-section">
                 <img
-                    src="../media/miriam.png"
+                    src="/media/miriam.png"
                     alt="Miriam Weber"
                     class="tm-new-board-blog-img"
                 />
@@ -349,7 +349,7 @@
             </div>
             <div class="tm-new-board-blog-section" style="margin-bottom: 60px">
                 <img
-                    src="../media/Karma-Dawa.png"
+                    src="/media/Karma-Dawa.png"
                     class="tm-new-board-blog-img"
                     alt="Yan Ciupak (Karma Dawa)"
                 />
@@ -463,7 +463,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
