--- a/src/pages/about/call-to-action.html
+++ b/src/pages/about/call-to-action.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -285,7 +285,7 @@
             <div style="display: flex; justify-content: center">
                 <figure class="hero" style="max-width: 850px">
                     <img
-                        src="../media/Letter_KKRinpoche.jpg"
+                        src="/media/Letter_KKRinpoche.jpg"
                         alt="Dear friends,
                     In recent years there have been many natural disasters and adverse conditions in Tibet. The area of Thrangu Monastery also suffered a devastating earthquake a few years ago. Despite all this, the nuns in the Thrangu Nunnery are maintaining pure practice in the midst of food shortage and other difficulties. I would therefore be delighted if anyone could offer help. May all be free from obstacles in this life and ultimately obtain excellent fruition.
                     Khenpo Kharthar Rinpoche"
@@ -402,7 +402,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
