--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="./media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -365,7 +365,7 @@
                                 <div class="center">
                                     <figure class="tm-dotted-box-fig">
                                         <img
-                                            src="./media/nuns-at-tilokpur.JPG"
+                                            src="/media/nuns-at-tilokpur.JPG"
                                             alt="nuns at Tilokpur nunnery"
                                         />
                                     </figure>
@@ -405,7 +405,7 @@
                                 <div class="center">
                                     <figure class="tm-dotted-box-fig">
                                         <img
-                                            src="./media/construction-in-sikkim.JPG"
+                                            src="/media/construction-in-sikkim.JPG"
                                             alt="construction at the nunnery in Sikkim"
                                         />
                                     </figure>
@@ -445,7 +445,7 @@
                                 <div class="center">
                                     <figure class="tm-dotted-box-fig">
                                         <img
-                                            src="./media/thrangu-roof-2.png"
+                                            src="/media/thrangu-roof-2.png"
                                             alt=""
                                             style="
                                                 max-height: 550px;
@@ -486,7 +486,7 @@
                                 <div class="center">
                                     <figure class="tm-dotted-box-fig">
                                         <img
-                                            src="./media/sponsor-1-cropped.png"
+                                            src="/media/sponsor-1-cropped.png"
                                             alt=""
                                         />
                                     </figure>
@@ -608,7 +608,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="./media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
