--- a/src/pages/sponsor.html
+++ b/src/pages/sponsor.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="./media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -280,7 +280,7 @@
             <div class="row">
                 <div class="col-12">
                     <img
-                        src="./media/nuns-baking.png"
+                        src="/media/nuns-baking.png"
                         alt="Nuns on the steps of Thrangu Nunnery"
                         class="hero"
                     />
@@ -538,7 +538,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="./media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
