--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -402,7 +402,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
