--- a/src/pages/nunneries/thrangu.html
+++ b/src/pages/nunneries/thrangu.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -276,12 +276,12 @@
 
             <div style="display: flex">
                 <img
-                    src="../media/many-nuns-on-steps-small.png"
+                    src="/media/many-nuns-on-steps-small.png"
                     alt="Nuns on the steps of Thrangu Nunnery"
                     style="flex: 1 1 100%; min-width: 0"
                 />
                 <img
-                    src="../media/thrangu-gompa-map-small-text.png"
+                    src="/media/thrangu-gompa-map-small-text.png"
                     style="flex: 1 1 100%; min-width: 0"
                 />
             </div>
@@ -330,11 +330,11 @@
 
                                 <div class="thrangu-gallery auspicious-roof">
                                     <img
-                                        src="../media/thrangu-nunnery.png"
+                                        src="/media/thrangu-nunnery.png"
                                         alt="Thrangu Nunnery"
                                     />
                                     <img
-                                        src="../media/thrangu-nunnery-digital.png"
+                                        src="/media/thrangu-nunnery-digital.png"
                                         alt="Thrangu Nunnery"
                                     />
                                 </div>
@@ -356,24 +356,24 @@
                                 <!-- thrangu-gallery -->
                                 <div class="roof-pics-1">
                                     <img
-                                        src="../media/thrangu-roof-2.png"
+                                        src="/media/thrangu-roof-2.png"
                                         alt=""
                                     />
 
                                     <div class="roof-pics-2">
                                         <figure>
                                             <img
-                                                src="../media/thrangu-roof-4.png"
+                                                src="/media/thrangu-roof-4.png"
                                                 alt=""
                                             />
                                         </figure>
                                         <div class="roof-pics-3">
                                             <img
-                                                src="../media/thrangu-roof-1.jpg"
+                                                src="/media/thrangu-roof-1.jpg"
                                                 alt=""
                                             />
                                             <img
-                                                src="../media/thrangu-roof-3.jpg"
+                                                src="/media/thrangu-roof-3.jpg"
                                                 alt=""
                                             />
                                         </div>
@@ -632,7 +632,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
