--- a/src/pages/nunneries/tilokpur.html
+++ b/src/pages/nunneries/tilokpur.html
@@ -95,7 +95,7 @@
 
                         <img
                             class="header-painted-wood"
-                            src="../media/painted-wood-cropped-4.png"
+                            src="/media/painted-wood-cropped-4.png"
                             alt=""
                         />
 
@@ -277,7 +277,7 @@
             <div class="row">
                 <div class="col-12">
                     <img
-                        src="../media/tilokpur-nuns.jpeg"
+                        src="/media/tilokpur-nuns.jpeg"
                         alt="Nuns on the steps of Thrangu Nunnery"
                         class="hero"
                     />
@@ -296,7 +296,7 @@
 
                     <figure class="hero">
                         <img
-                            src="../media/Tilokpur-Map.png"
+                            src="/media/Tilokpur-Map.png"
                             style="max-width: 750px"
                         />
                         <figcaption
@@ -444,7 +444,7 @@
                 <!--End mc_embed_signup-->
                 <img
                     id="footer-painted-wood"
-                    src="../media/painted-wood-cropped-3.png"
+                    src="/media/painted-wood-cropped-3.png"
                     alt=""
                 />
 
