use working optimized image from 11ty image plugin

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,9 @@
 
                 <div class="center">
                     <figure class="tm-dotted-box-fig">
-                        <img src="/media/sponsor-1-cropped.png" alt="" />
+                        <!-- <img src="/media/sponsor-1-cropped.png" alt="" /> -->
+                        {% image "./src/media/sponsor-1-cropped.png", "",
+                        "(min-width: 700px) 1000px, (maxwidth: 300px) 300px" %}
                     </figure>
 
                     <a href="./sponsor.html" class="tm-link-card-bottom"
